--- a/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
@@ -20,7 +20,7 @@
     <ui:define name="centerFormContent">       
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" >
             <p:tab title="#{bundle.Message}"  >
-                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
                     <p:outputLabel value="#{bundle.Message}:" indicateRequired="true"/>
                     <p:inputTextarea value="#{messageCardBean.editedItem.content}" styleClass="ui-grid-col-12"
                                      rows="1" autoResize="true"
