--- a/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
@@ -21,14 +21,22 @@
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{procedureCardBean.editedItem != null}" >
             <p:tab title="#{bundle.Procedure}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                    <p:outputLabel value="#{bundle.Action}:" indicateRequired="true" />
                     <p:selectOneMenu value="#{procedureCardBean.selected}" converter="procedureConvertor"
-                                     styleClass="ui-grid-col-12"
+                                     styleClass="ui-grid-col-12"                                     
                                      required="#{param['isRequired'] == 'true'}"
                                      requiredMessage="#{bundle.Field} [#{bundle.Procedure}] #{bundle.MustBeFilled}">
                         <f:selectItems value="#{procedureBean.findAll()}" var="item" itemLabel="#{procedureCardBean.getLabelFromBundle(item.getName())}" itemValue="#{item}"/>
                         <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
+                        <p:ajax event="change" update="name" partialSubmit="true" listener="#{procedureCardBean.onActionChange()}"/>
                     </p:selectOneMenu>
-                </p:panelGrid>
+                    
+                    <p:outputLabel value="#{bundle.Name}:" indicateRequired="true" />
+                    <p:inputText id="name" value="#{procedureCardBean.caption}"
+                                 styleClass="ui-grid-col-12"
+                                 required="#{param['isRequired'] == 'true'}"
+                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+                </p:panelGrid>                
             </p:tab>
         </p:tabView>
     </ui:define>
